@@ -72,7 +72,6 @@ import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.JarInputStream;
 import java.util.jar.Manifest;
-import java.util.stream.Collectors;
 
 import static io.ballerina.projects.util.FileUtils.getFileNameWithoutExtension;
 import static io.ballerina.projects.util.ProjectConstants.BIN_DIR_NAME;
@@ -290,7 +289,7 @@ public class JBallerinaBackend extends CompilerBackend {
         return getPlatformLibraries(packageId)
                 .stream()
                 .filter(platformLibrary -> platformLibrary.scope() == scope)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<PlatformLibrary> getPlatformLibraries(PackageId packageId) {
