@@ -82,7 +82,8 @@ import static io.ballerina.projects.util.ProjectConstants.TOOL_DIR;
  *
  * @since 2.0.0
  */
-public class BalaFiles {
+public final class BalaFiles {
+
     private static final Gson gson = new Gson();
 
     // TODO change class name to utils
@@ -204,7 +205,7 @@ public class BalaFiles {
                     .filter(Files::isDirectory)
                     .map(modulePath -> modulePath.getFileName().toString())
                     .map(fullModuleName -> loadModule(pkgName, fullModuleName, packagePath))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             throw new ProjectException("Failed to read modules from directory: " + modulesDirPath, e);
         }
@@ -653,7 +654,7 @@ public class BalaFiles {
     private static List<ModuleDescriptor> createModDescriptorList(List<ModuleDependency> modDepEntries) {
         return modDepEntries.stream()
                 .map(BalaFiles::getModuleDescriptorFromDependencyEntry)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static DependencyGraphJson readDependencyGraphJson(Path dependencyGraphJsonPath) {
