@@ -44,7 +44,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.wso2.ballerinalang.util.LambdaExceptionUtils.rethrow;
@@ -83,7 +82,7 @@ public class FileSystemProgramDirectory implements SourceDirectory {
                 fileNames = stream.map(ProjectDirs::getLastComp)
                         .filter(ProjectDirs::isSourceFile)
                         .map(Path::toString)
-                        .collect(Collectors.toList());
+                        .toList();
             }
             return fileNames;
         } catch (SecurityException | AccessDeniedException e) {
@@ -174,15 +173,9 @@ public class FileSystemProgramDirectory implements SourceDirectory {
     }
 
     private String getTopLevelDirNameInPackage(CompilerOutputEntry.Kind kind, FileSystem fs) {
-        switch (kind) {
-            case SRC:
-            case BIR:
-            case OBJ:
-                return kind.getValue();
-            case ROOT:
-                return fs.getSeparator();
-
-        }
-        return null;
+        return switch (kind) {
+            case SRC, BIR, OBJ -> kind.getValue();
+            case ROOT -> fs.getSeparator();
+        };
     }
 }
