@@ -48,14 +48,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Builds package resolution test cases.
  *
  * @since 2.0.0
  */
-public class PackageResolutionTestCaseBuilder {
+public final class PackageResolutionTestCaseBuilder {
 
     private PackageResolutionTestCaseBuilder() {
     }
@@ -101,7 +100,7 @@ public class PackageResolutionTestCaseBuilder {
                                                             PackageDescriptor rootPkgDes) {
         return rootPkgDescWrapper.modules().stream()
                 .map(modNameStr -> Utils.getModuleName(rootPkgDes.name(), modNameStr))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static DependencyGraph<DependencyNode> getPkgDescGraph(Path dotFilePath) {
